Updated CSS & HTML

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
                 <label for="password">Enter your password:<input id="passowrd" type="password" placeholder="Password" required></label>
             </fieldset>
             <fieldset>
-                <label for="T&Cs"><input id="T&Cs" type="checkbox" required>
+                <label class="terms" for="T&Cs"><input class="terms" id="T&Cs" type="checkbox" required>
                     Accept <a href="www.google.com">Terms & Condition</a>
                     </label>
-                <label for="picture">Upload profile picture<input id="picture" type="file"></label>
-                <label>How did you hear about us?</label>
-                <select>
+                <label class="picture" for="picture">Upload profile picture:<input class="picture" id="picture" type="file"></label>
+                <label class="terms" >How did you hear about us?</label>
+                <select class="terms">
                     <option value="">Please select</option>
                     <option value="1">Facebook</option>
                     <option value="2">Twitter</option>
                     <option value="3">Instagram</option>
                     <option value="4">Other</option>
                 </select>
-                <label>Why would you like to join?<textarea placeholder="Fill in"></textarea></label>
+                <label class="reason">Why would you like to join?<textarea class="reason" placeholder="Your reason"></textarea></label>
             </fieldset>
             <fieldset>
-                <label for="submit"><input id="submit" type="submit"></label>
+                <label for="submit"><input  class="submit" id="submit" type="submit"></label>
             </fieldset>
             
         </form>
